[package]
name = "md-link"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
html-escape = "0.2.13"
reqwest = "0.12.1"
tl = "0.7.7"
worker = "0.1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
